<resources>
    <string-array name="cancel_order_reasons">
        <item>@string/cancel_order_reason__1</item>
        <item>@string/cancel_order_reason_2</item>
        <item>@string/cancel_order_reason_3</item>
        <item>@string/cancel_order_reason_4</item>
        <item>@string/cancel_order_reason_5</item>
    </string-array>
    <string name="app_name"> Network directory </string>
    <string name="splash_text_label1"> All rights reserved to the network directory store </string>
    <string name="splash_text_label2"> Welcome to the network directory </string>
    <string name="bottomnavigation_label_main"> Home </string>
    <string name="bottomnavigation_label_cate"> Categories </string>
    <string name="bottomnavigation_label_offers"> Shows </string>
    <string name="bottomnavigation_label_basket"> Cart </string>
    <string name="bottomnavigation_label_account"> My Account </string>
    <string name="default_notification_channel_id" translatable="false"> fcm_default_channel </string>
    <string name="default_notification_channel_name" translatable="true"> Weather </string>
    <string name="no_internet"> No Internet connection </string>
    <string name="detail_color"> Color </string>
    <string name="detail_size_label"> Capacity </string>
    <string name="details_like_too"> You may also like </string>
    <string name="title_activity_maps"> Map </string>
    <string name="fragment_account_label"> My Account </string>
    <string name="fragment_account_text_login"> Login </string>
    <string name="fragment_account_text_register"> Subscribe now </string>
    <string name="fragment_account_region_name"> Country </string>
    <string name="fragment_account_language_label"> Language </string>
    <string name="fragment_shooping_add_address_text0"> Add an address now so we can deliver your order </string>
    <string name="sort_menu_price_descend"> Price: high to low </string>
    <string name="remove_fav"> Deleted from favorites </string>
    <string name="fragment_account_contact_us_label"> Contact Us </string>
    <string name="fragment_account_contact_us_help_linear_label"> Help </string>
    <string name="fragment_account_contact_us_help_linear_label_la"> Contact Us </string>
    <string name="fragment_account_links_label_label"> Help Links </string>
    <string name="fragment_account_links_conditions_linear_label"> Terms and Conditions </string>
    <string name="fragment_account_links_privacy_linear_label"> Privacy Policy </string>
    <string name="fragment_account_links_cancel_linear_label"> Order Cancellation Policy </string>
    <string name="fragment_account_links_exchange_linear_label"> Return and Exchange Policy </string>
    <string name="fragment_account_links_connect_linear_label"> Shipping &amp; Delivery </string>
    <string name="fragment_account_links_guarantee_linear_label"> Warranty </string>
    <string name="fragment_account_links_support_linear_label"> Technical Support </string>
    <string name="fragment_basket_elements_label"> Shopping cart items </string>
    <string name="fragment_basket_elements_label_header"> Shopping Cart </string>
    <string name="fragment_basket_elements_enter_code_label"> Apply </string>
    <string name="fragment_basket_elements_edittext_hint"> Enter coupon </string>
    <string name="fragment_basket_total_price_products_label"> Total Products </string>
    <string name="currancy_label"> SR </string>
    <string name="fragment_basket_total_shipments_label"> Shipping </string>
    <string name="fragment_basket_tax_label"> VAT </string>
    <string name="fragment_basket_total_price_label"> Grand Total </string>
    <string name="fragment_basket_paying_label"> Payment </string>
    <string name="ragment_account_after_login_profile_text"> Profile </string>
    <string name="fragment_account_after_login_orders_text"> Requests </string>
    <string name="fragment_account_after_login_likes_text"> Favorites </string>
    <string name="fragment_account_after_login_wallet_text"> Wallet </string>
    <string name="login_text_welcome"> Welcome to the network directory </string>
    <string name="login_mail_edittext"> E-mail </string>
    <string name="login_pass_edittext"> Password </string>
    <string name="login_no_have_account_text"> Don\'t have an account ..? Register now </string>
    <string name="login_text_forget_pass"> Forgot your password ...? </string>
    <string name="login_not_now_text"> Not now ..? Skip </string>
    <string name="activity_contactus_header_text"> Terms &amp; Conditions </string>
    <string name="we_here"> We are here </string>
    <string name="fragment_account_setting_label"> Settings </string>
    <string name="fragment_account_after_login_account_label"> My Account </string>
    <string name="fragment_account_after_login_addresses_linear"> Addresses </string>
    <string name="ragment_account_after_login_pay_label"> Payment </string>
    <string name="ragment_account_after_login_return_label"> Return </string>
    <string name="ragment_account_after_login_logout_label"> Sign out </string>
    <string name="login_go_enter_text"> Login </string>
    <string name="activity_conditions_header_text"> Terms &amp; Conditions </string>
    <string name="activity_profile_name_text"> First Name </string>
    <string name="activity_profile_last_name_text"> Last Name </string>
    <string name="activity_profile_email_text"> E-mail </string>
    <string name="activity_profile_pass_text"> Password </string>
    <string name="activity_profile_update_text"> Edit </string>
    <string name="activity_profile_info_text_label"> Account Information </string>
    <string name="activity_orders_header_text"> Requests </string>
    <string name="activity_orders_all_label"> All requests </string>
    <string name="activity_elements_orders_header_text"> Request </string>
    <string name="elements_order_date_text"> Order Date </string>
    <string name="elements_order_number_order_text"> Order Number </string>
    <string name="elements_order_state_text"> Request Status </string>
    <string name="likes_text_label_text"> Product </string>
    <string name="like_item_text_add_to_card"> Add to Cart </string>
    <string name="activity_filter_header_text"> Filter Products </string>
    <string name="filter_btn_label"> Filter </string>
    <string name="filter_categories_label"> section </string>
    <string name="filter_flags_label"> Brand </string>
    <string name="filter_colors_label"> Color </string>
    <string name="filter_prices_label"> Price </string>
    <string name="offers_header_text"> Offers </string>
    <string name="offers_text"> Today\'s Deals </string>
    <string name="category_text_label_text"> Product </string>
    <string name="fragment_shooping_add_address_text"> Add new address </string>
    <string name="fragment_shooping_add_address_text1"> Where are your wallet addresses? </string>
    <string name="fragment_payment_phone_number_text1"> Please confirm your mobile number </string>
    <string name="fragment_payment_phone_number_text2"> To continue with the payment, use the code and verify the mobile number </string>
    <string name="fragment_payment_phone_number_text3"> Code sent to mobile number </string>
    <string name="search_here"> Looking here </string>
    <string name="confirm_internet"> Please make sure you are connected to the Internet </string>
    <string name="safety_shipping_main_fragment"> Shop safely </string>
    <string name="pay_on_arrive_main_fragment"> Pay on Delivery </string>
    <string name="free_shipping_main_fragment"> Free shipping </string>
    <string name="acc_more_text"> More </string>
    <string name="discount_phone_txt"> Discount </string>
    <string name="phone_row_add_to_card_txt"> Add to Cart </string>
    <string name="details_add_to_card_label"> Add to cart </string>
    <string name="details_quantaty_txt_label"> Quantity </string>
    <string name="desc_product_label"> Specifications </string>
    <string name="full_desc_product_label"> Full description </string>
    <string name="radio_company_register_label"> Company </string>
    <string name="radio_indivdual_register_label"> Single </string>
    <string name="type_radio"> Type </string>
    <string name="type_radio_lang"> Language </string>
    <string name="radio_ar_register"> العربية </string>
    <string name="radio_en_register"> English </string>
    <string name="register_first_name_edittext_hint"> First Name </string>
    <string name="register_last_name_edittext_hint"> Last Name </string>
    <string name="field_required"> This field is required! </string>
    <string name="choose_type"> Please make sure you select the type </string>
    <string name="choose_lang"> Please select a language </string>
    <string name="error_confirm_message"> Please check your password </string>
    <string name="register_responsible_edittext_hint"> Admin </string>
    <string name="register_pass_confirm_edittext_hint"> Confirm Password </string>
    <string name="country_spinner_label"> Country </string>
    <string name="regions_spinner_label"> Region </string>
    <string name="spinner_city_label"> City </string>
    <string name="register_mobile_edittext_label"> Mobile Phone </string>
    <string name="choose_country"> Please select a country </string>
    <string name="choose_region"> Please select the region </string>
    <string name="choose_city"> Please select a city </string>
    <string name="register_address_edittext_label"> Address </string>
    <string name="register_name_company_edittext_label"> Company Name </string>
    <string name="fragment_payment_phone_number_text5_label"> Resend the code </string>
    <string name="fragment_payment_phone_number_btn_sure"> Confirm </string>
    <string name="fragment_payment_phone_number_text_change"> Number changed </string>
    <string name="fragment_shooping_list_addresses_text_add"> Add new address </string>
    <string name="please_login_first"> Please log in first </string>
    <string name="add_to_favourites"> Added to favorites </string>
    <string name="unlike_fiv"> Please Unlike from your favorites </string>
    <string name="add_to_card"> Added to cart </string>
    <string name="dialog_change_quantity_dialog_label"> Enter the quantity to order </string>
    <string name="dialog_text_ok_label"> OK </string>
    <string name="dialog_text_cancel_label"> Cancel </string>
    <string name="cart_out_of_stock_label"> Out of Quantity </string>
    <string name="no_items_text"> There are no products to display at this time </string>
    <string name="discount_label"> Discount </string>
    <string name="new_arrival_header_text"> New Arrivals </string>
    <string name="add_address"> Add the address </string>
    <string name="postal_code"> Postal number </string>
    <string name="add_address_sucess"> Address successfully added </string>
    <string name="mobile_payment_addresses_text"> Mobile Number: </string>
    <string name="address_payment_addresses_text"> Address: </string>
    <string name="name_payment_addresses_text"> Name: </string>
    <string name="ask_to_change_adress"> Change the primary address with that address? </string>
    <string name="activity_payment_header_text"> Payment </string>
    <string name="address_add_go_update_text"> Edit the address </string>
    <string name="sort_menu_price_ascend"> Price: Low to High </string>
    <string name="sort_menu_date_ascend"> Date: Oldest to Newest </string>
    <string name="sort_menu_date_descend"> Date: newest to oldest </string>
    <string name="menu_home">Home</string>
    <string name="salesman_menu_customers_new_orders">Customers New Orders</string>
    <string name="salesman_menu_company_new_orders">Company New Orders</string>
    <string name="log_out">Log Out</string>
    <string name="salesman_menu_language">Language</string>
    <string name="cancel_order_label">Cancel Order</string>
    <string name="edit_quantity_label">Change Quantity</string>
</resources>