<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_company_unchecked"
            android:title="@string/salesman_menu_company_new_orders" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_avatar"
            android:title="@string/salesman_menu_customers_new_orders" />
        <item
            android:id="@+id/nav_language"
            android:title="@string/salesman_menu_language" />

        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>
