<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottomnavigation_label_main"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/categories_fragment"
        android:icon="@drawable/ic_layers"
        android:title="@string/bottomnavigation_label_cate"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/offers_fragment"
        android:icon="@drawable/ic_discount"
        android:title="@string/bottomnavigation_label_offers"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/basket_fragment"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/bottomnavigation_label_basket"
        android:enabled="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/ic_avatar"
        android:title="@string/bottomnavigation_label_account"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>