<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/sort_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sort_date_descend"
            android:title="@string/sort_menu_date_descend"
            android:visible="true" />

        <item
            android:id="@+id/sort_date_ascend"
            android:title="@string/sort_menu_date_ascend"
            android:visible="true" />

        <item
            android:id="@+id/sort_price_descend"
            android:title="@string/sort_menu_price_descend"
            android:visible="true" />

        <item
            android:id="@+id/sort_price_ascend"
            android:title="@string/sort_menu_price_ascend"
            android:visible="true" />

    </group>
</menu>