<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/change_quantity_custom_dialog"
    android:paddingBottom="12dp"
    android:paddingEnd="12dp"
    android:paddingStart="12dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_change_quantity_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:hint="@string/dialog_change_quantity_dialog_label"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dialog_change_quantity_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_change_quantity_dialog">

        <TextView
            android:id="@+id/dialog_text_ok"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:background="@drawable/dialog_ok_background"
            android:fontFamily="@font/arabicuitext_b"
            android:gravity="center"
            android:text="@string/dialog_text_ok_label"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dialog_text_cancel"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_cancel_background"
            android:fontFamily="@font/arabicuitext_b"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:text="@string/dialog_text_cancel_label"
            android:textColor="#FFFFFF"
            android:textSize="12dp" />
    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/arabicuitext_b"
        android:text="wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww"
        android:textColor="#F0F0F0"
        android:textSize="6sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_change_quantity_linear" />
</LinearLayout>